# MyRenderer

./: CMakeLists.txt  Makefile  Scene.txt  bitmap.h  camera.cpp  camera.h  light.cpp  light.h  main.cpp  matrix.cpp  matrix.h  model.cpp  model.h  object.cpp  object.h  painter.cpp  scene.h  transform.cpp  transform.h  vector.cpp  vector.h
Models/: koishi.mtl
src/: main.cpp
src/graphics/: bitmap.cpp  bitmap.h  material.cpp  material.h  painter.h  shader.cpp  shader.h
src/math/: aabb.h  bounds.cpp  bounds.h  matrix.cpp  matrix.h  quaternion.cpp  quaternion.h  vector.cpp  vector.h
src/objects/: camera.cpp  camera.h  light.cpp  light.h  model.cpp  model.h  object.cpp  object.h  transform.cpp  transform.h
src/scene/: scene.cpp  scene.h  timer.cpp  timer.h
